# SmartRename

./: .gitignore  .prettierignore  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  eslint.config.js  package.json  pnpm-lock.yaml  skills-lock.json
.github/workflows/: release.yml
.nezha/: config.toml
.trae/documents/: ai-rename-feature-plan.md  smart-rename-implementation-plan.md  template-shortcuts-and-folder-rename-plan.md
docs/: AUTO_UPDATE.md  AUTO_UPDATE.zh-CN.md  CONTEXT_MENU_TROUBLESHOOTING.md  ChangeLog.md  GLOBAL_SHORTCUT.md  GLOBAL_SHORTCUT.zh-CN.md  I18N.md  I18N.zh-CN.md  TAURI_TEMPLATE_PITFALLS.zh-CN.md
screenshots/: .gitkeep
scripts/: release-version.mjs
src/: CLAUDE.md  index.css  main.tsx
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/plugins/: system_tray.rs
src-tauri/src/rename/: ai.rs  commands.rs  context_menu.rs  file_utils.rs  mod.rs  template.rs
src/components/: language-toggle.tsx  main-title-bar.tsx  shortcut-input.tsx  theme-provider.tsx  title-bar.tsx  updater-dialog.tsx  window-frame.tsx
src/components/rename/: dynamic-form.tsx  file-list.tsx  rename-controls.tsx  template-editor-dialog.tsx  template-selector.tsx
src/hooks/: use-app-translation.ts  use-rename.ts  use-updater.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  zh.json
src/lib/: shortcut.ts  updater.ts  window.ts
src/pages/: about.tsx  home.tsx  settings.tsx
test/: notes.docx  presentation.pptx  report.txt
